--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://ratalla816.github.io/react-portfolio/",
+  "homepage": "http://ratalla816.github.io/atalla-react-portfolio/",
   "name": "react-portfolio",
   "version": "0.1.0",
   "private": true,
