--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "http://ratalla816.github.io/atalla-react-portfolio/",
-  "name": "react-portfolio",
+  "name": "atalla-react-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
